test/error/E37.chigfn
{
	"type": "function",
	"name": "helloworld",
	"nodes": {
		"if": {
			"type": "lang:ieeef",
			"data": {},
			"location": [2, 2]
		}
	},
	"connections": [
	]
}
